# safe-home-services

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  healthcheck.py  pyproject.toml  run.py
.agents/: CONTEXT.md
.atl/: skill-registry.md
.github/workflows/: ci.yml
agents/default/: agent.py
docs/: architecture-diagram.md  architecture.md  demo-script.md
docs/changes/google-maps-mcp/: design.md  proposal.md  tasks.md
docs/changes/google-maps-mcp/specs/address-geocoding/: spec.md
docs/changes/sqlite-persistence/: proposal.md  tasks.md
docs/changes/sqlite-persistence/specs/database-persistence/: spec.md
docs/changes/web-ui-contratacion/: design.md
hogar_confianza/: _model.py  agent.py  fast_api_app.py  i18n.py
hogar_confianza/agents/: booking.py  matching.py  safety.py  triage.py
hogar_confianza/database/: __init__.py  engine.py  models.py  seed.py
hogar_confianza/mcp_server/: maps_server.py  server.py
hogar_confianza/models/: schemas.py
hogar_confianza/security/: pii_redactor.py
hogar_confianza/tools/: maps_client.py  maps_tools.py  provider_tools.py  safety_tools.py
tests/: conftest.py  test_agents.py  test_database.py  test_maps_client.py  test_maps_tools.py  test_provider_location.py  test_tools_db.py
tests/eval/: evaluate.py  generate_traces.py
tests/eval/datasets/: basic-dataset.json
