[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hogar-confianza"
version = "1.0.0"
description = "AI Concierge Agent for Home Services - Conecta hogares con proveedores de servicio doméstico confiables"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.0.0a0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.22",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hogar_confianza*"]
